# Social_media_agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cli.py  content_generation  hello.py  pyproject.toml  requirements.txt  run_agent.py  test_email.py
app/: MANIFEST.in  README.md  app.py  app_minimal.py  build2.ipynb  configuration.py  example.py  graph.py  ig_agent_demo.ipynb  loopver_agent.ipynb  setup.py  state.py  streamlit_app.py  tools_and_schemas.py  utils.py
app/data/: content_history.json
app/ig_agent/: __init__.py  cli.py  instagram_agent.py  pipeline.py
app/ig_agent/agents/: __init__.py  content_agent.py  image_agent.py  instagram_poster.py  notification_agent.py
app/ig_agent/prompts/: content_generation.txt  supervisor.txt
app/ig_agent/templates/: __init__.py  template_processor.py
app/ig_agent/utils/: __init__.py  prompt_loader.py
app/prompts/: content_generation.txt  images_generation.txt  notification.txt
app/v2/: base64image.txt  planexcute_agent.ipynb
instagram_poster/: config.py  main.py
instagram_poster/agents/: content_agent.py  date_agent.py  image_agent.py  instagram_agent.py  search_agent.py
instagram_poster/data/: used_titles.json
instagram_poster/prompts/: ai_news_prompt.txt
instagram_poster/templates/: template_processor.py
instagram_poster/utils/: date_utils.py  prompt_loader.py  title_tracker.py
