[project]
name = "ig-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckduckgo-search>=8.0.0",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.13",
    "langchain-xai>=0.2.3",
    "langgraph>=0.3.30",
    "langsmith>=0.3.31",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.5",
]
