[project]
name = "ig-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cairosvg>=2.7.1",
    "duckduckgo-search>=8.0.0",
    "instagrapi>=2.1.3",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.13",
    "langchain-xai>=0.2.3",
    "langgraph>=0.3.30",
    "langsmith>=0.3.31",
    "pycairo>=1.28.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "ruff>=0.11.5",
]
